add square output path to config

--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,9 @@ business_name = your_business_name
 
 [books_api_links]
 google = https://www.googleapis.com/books/v1/volumes?q=isbn:
+
+[libraryThing]
+input_path = data/librarything_plazzer.tsv
+
+[square]
+output_path = data/square_bulk_upload.xlsx
